--- a/labtasks/GoogleMapPlaces/app/build.gradle
+++ b/labtasks/GoogleMapPlaces/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:25.3.1'
     implementation 'com.google.android.gms:play-services-maps:10.2.4'
     implementation 'com.google.android.gms:play-services-location:10.2.4'
+    compile 'com.google.android.gms:play-services:10.2.4'
 }
